Added using baseURL for all links to JS and CSS files.

--- a/application/modules/planner/views/scripts/alerts/index.phtml
+++ b/application/modules/planner/views/scripts/alerts/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->headScript()->appendFile('/js/alerts.js'); ?>
+<?php $this->headScript()->appendFile($this->baseUrl() . '/js/alerts.js'); ?>
 
 <div class="span12 alerts-container">
     <div class="alert-1-header">
