--- a/application/modules/planner/views/scripts/overview/index.phtml
+++ b/application/modules/planner/views/scripts/overview/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->headScript()->appendFile('/js/overview.js'); ?>
+<?php $this->headScript()->appendFile($this->baseUrl() . '/js/overview.js'); ?>
 
 <div class="span12 group-overview-container">
     <div class="group-overview-header">
