--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -1,7 +1,7 @@
-<?php $this->headScript()->appendFile('/js/group-settings.js'); ?>
+<?php $this->headScript()->appendFile($this->baseUrl() . '/js/group-settings.js'); ?>
 <?php /********** INCLUDE CALENDAR MODULE *****************/ ?>
-<?php $this->headScript()->appendFile('/js/calendar.js'); ?>
-<?php $this->headLink()->appendStylesheet('/css/calendar.css'); ?>
+<?php $this->headScript()->appendFile($this->baseUrl() . '/js/calendar.js'); ?>
+<?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/calendar.css'); ?>
 
 <?php
 $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'action' => 'save-group-setting-max-free-people'), 'planner', true);
