--- a/application/modules/planner/views/scripts/user-settings/index.phtml
+++ b/application/modules/planner/views/scripts/user-settings/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->headScript()->appendFile('/js/user-settings.js'); ?>
+<?php $this->headScript()->appendFile($this->baseUrl() . '/js/user-settings.js'); ?>
 
 <div class="span12">
     <table class="table table-bordered table-hover user-settings-table table-small-td">
