Fix for many status on day

--- a/application/modules/planner/views/scripts/forms/edit-status.phtml
+++ b/application/modules/planner/views/scripts/forms/edit-status.phtml
@@ -12,7 +12,7 @@
     <?php //echo $this->element->long_description; ?>
 </div>
 <div class="control-status">
-    <label class="" for="is_holiday">Status is holiday
+    <label class="is-holiday" for="is_holiday">Status is holiday
     <?php
         $statusId = $this->element->id->getAttrib('_value');
         if ($statusId == 1 || $statusId == 2 || $statusId == 7 || $statusId == 3) {
