Alert page and script

--- a/application/modules/planner/views/scripts/_blocks/history.phtml
+++ b/application/modules/planner/views/scripts/_blocks/history.phtml
@@ -54,6 +54,8 @@
             <?php
                 if (empty($workTime['total'])) {
                     echo "-";
+                } elseif ($this->historyBlockController == 'alerts') {
+                    echo $workTime['num_incident'];
                 } else {
                     echo $workTime['total'];
                 }
