--- a/application/modules/planner/views/scripts/alerts/_blocks/alerts-user-row.phtml
+++ b/application/modules/planner/views/scripts/alerts/_blocks/alerts-user-row.phtml
@@ -1,5 +1,9 @@
 <div class="group-history-block pull-left">
-    <div class="div-row">&nbsp;</div>
+                <span class="span2 block-history">
+                <a href="<?php echo $this->url(array('controller' => 'alerts', 'action' => 'index', 'year' => $this->year - 1, 'week' => 1), 'planner', true); ?>" rel="tooltip" class="bootstrab-tooltip get-week-details" title="<?php echo 'Year: ' . ($this->year - 2)  ; ?>">
+                    < Prev Year
+                </a>
+                </span>
     <div class="group-free-days-table">
         <table class="history table table-bordered table-condensed table-striped">
             <thead>
@@ -8,7 +12,7 @@
             </tr>
             <tr  class="week-table-header" style="background-color: #<?php echo $this->group['color'];?>">
                 <th>
-                    Prev Year
+                    Year <?php echo ($this->year - 1); ?>
                     <a href="#" class="show-tooltip no-action" data-original-title="All incident type total at the previous year"><i class="icon-info-sign"></i></a>
                 </th>
             </tr>
