small layout fix

--- a/application/modules/planner/views/scripts/alerts/_blocks/alerts-user-row.phtml
+++ b/application/modules/planner/views/scripts/alerts/_blocks/alerts-user-row.phtml
@@ -1,5 +1,5 @@
 <div class="group-history-block pull-left">
-                <span class="span2 block-history">
+                <span >
                 <a href="<?php echo $this->url(array('controller' => 'alerts', 'action' => 'index', 'year' => $this->year - 1, 'week' => 1), 'planner', true); ?>" rel="tooltip" class="bootstrab-tooltip get-week-details" title="<?php echo 'Year: ' . ($this->year - 2)  ; ?>">
                     < Prev Year
                 </a>
