--- a/application/modules/planner/views/scripts/alerts/index.phtml
+++ b/application/modules/planner/views/scripts/alerts/index.phtml
@@ -143,7 +143,7 @@
 
             <span class="span2 block-week-details week-details main-data-container ">
                 <div class="group-history-block pull-left">
-                    <span class="span2 block-history">
+                    <span >
                         <a href="<?php echo $this->url(array('controller' => 'alerts', 'action' => 'index', 'year' => $this->year - 1, 'week' => 1), 'planner', true); ?>" rel="tooltip" class="bootstrab-tooltip get-week-details" title="<?php echo 'Year: ' . ($this->year - 2)  ; ?>">
                             < Prev Year
                         </a>
